@@ -1,3 +1,11 @@
+2007-01-20  Paolo Maggi  <paolo@gnome.org>
+
+	Fixes bug #398343 – Text Editor: gedit is not accpecting sett...
+	
+	* gedit/gedit-prefs-manager-app.c
+	(gedit_prefs_manager_editor_font_changed): correctly set the font
+	when the editor_font gconf key changes.
+
 2007-01-17  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit/gedit-view.c: unref the the icon in the incremental
